--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^22.9.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
