--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/zachariyaJaveri/SOEN-341-Project#readme",
     "dependencies": {
+        "bootstrap": "^5.3.3",
         "concurrently": "^9.1.0",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
