--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "mongoose": "^8.8.2",
-        "nodemon": "^3.1.7"
+        "nodemon": "^3.1.7",
+        "react-bootstrap": "^2.10.6",
+        "react-icons": "^5.3.0"
+    },
+    "devDependencies": {
+        "@types/react-bootstrap": "^0.32.37",
+        "@types/react-icons": "^2.2.7"
     }
 }
